--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "grunt-uncss": "^0.9.0",
+    "gulp": "^4.0.2"
   }
 }
