--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-animated-css": "^1.2.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
