--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-animated-css": "^1.2.1",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
