--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "react": "^16.12.0",
     "react-animate-on-scroll": "^2.1.5",
     "react-animated-css": "^1.2.1",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.1",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
     "typescript": "^3.7.5",
